--- a/.github/workflows/update-feed.yml
+++ b/.github/workflows/update-feed.yml
@@ -9,7 +9,7 @@ on:
     # Adjust refresh schedule here. By default, it runs once per day.
     # Syntax reference: https://docs.github.com/en/actions/reference/events-that-trigger-workflows#schedule
     # Recommended tool: https://crontab.guru/
-    - cron: "12 5 * * *"
+    - cron: "* * * * *"
 
 jobs:
   build:
@@ -47,3 +47,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./target
           force_orphan: true
+
+permissions:
+  contents: write
