--- a/.github/workflows/update-feed.yml
+++ b/.github/workflows/update-feed.yml
@@ -9,7 +9,7 @@ on:
     # Adjust refresh schedule here. By default, it runs once per day.
     # Syntax reference: https://docs.github.com/en/actions/reference/events-that-trigger-workflows#schedule
     # Recommended tool: https://crontab.guru/
-    - cron: "* * * * *"
+    - cron: "*/1 * * * *"
 
 jobs:
   build:
@@ -48,5 +48,3 @@ jobs:
           publish_dir: ./target
           force_orphan: true
 
-permissions:
-  contents: write
