--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 site_title = "MyArxiv"
-limit_days = 7
-cache_url = "https://yueyin27.github.io/MyArxivD/cache.json"
+limit_days = 10
+cache_url = "https://yueyin27.github.io/MyArxivDaily/cache.json"
 
 [[sources]]
 limit = 300
